fixed scrolling overflow

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -43,7 +43,7 @@ img{
   margin-top: 7%;
   text-align: center;
   font-family: 'Overpass', sans-serif;
-  font-size: 2.7vh;
+  font-size: 2.3vh;
   color: black;
 
   -moz-user-select: none;
